Change title of household search to "Search Members"
Signed-off-by: Max Fierke <fierk007@umn.edu>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Household/index.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Household/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'UMRAMemberBundle::nav.html.twig' %}
 
 {% block modulecontent -%}
-    <h3>Households</h3>
+    <h3>Search Members</h3>
 
     <form method="get" action="{{ path('UMRA_Household') }}">
         {{ form_rest(form) }}
