--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Trans/index.csv.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Trans/index.csv.twig
@@ -1,6 +1,6 @@
 {% autoescape false %}
-Date, Type, Amount, Payment Method, Details, Notes
+Date, Type, Amount, Payment Method, Details, Reconciled by, Reconciled Date, Payment Processor ID, Invoice ID, Notes
 {% for entity in entities %}
-"{{ entity.trandate|date('m-d-Y') }}","{% if entity.trantype == 'MEMBERSHIP_NEW' %}New Membership Fee{% elseif entity.trantype == 'MEMBERSHIP_RENEW' %}Renewal Fee{% elseif entity.trantype == 'LUNCHEON_FEE' %}Luncheon Fee{% elseif entity.trantype == 'PARKING_PASS' %}Parking Pass{% else %}{{ entity.trantype }}{% endif %}","${{ entity.amount + entity.servicechg }}","{% if entity.pmtmethod == "CREDIT_CARD" %}Credit Card / PayPal{% elseif entity.pmtmethod == "CHECK" %}Check{% else %}Other{% endif %}","{% if show_luncheons is defined and show_luncheons %}{{ entity.luncheon }}{% endif %}"
+"{{ entity.trandate|date('m-d-Y') }}","{% if entity.trantype == 'MEMBERSHIP_NEW' %}New Membership Fee{% elseif entity.trantype == 'MEMBERSHIP_RENEW' %}Renewal Fee{% elseif entity.trantype == 'LUNCHEON_FEE' %}Luncheon Fee{% elseif entity.trantype == 'PARKING_PASS' %}Parking Pass{% else %}{{ entity.trantype }}{% endif %}","${{ entity.amount + entity.servicechg }}","{% if entity.pmtmethod == "CREDIT_CARD" %}Credit Card / PayPal{% elseif entity.pmtmethod == "CHECK" %}Check{% else %}Other{% endif %}","{% if show_luncheons is defined and show_luncheons %}{{ entity.luncheon }}{% endif %}","{% if entity.doneby %}{{ entity.doneby.fullname }}{% endif %}","{{ entity.reconciledDate|date('m-d-Y') }}","{{ entity.procTranId }}","{{ entity.invoiceId }}","{{ entity.notes }}"
 {% endfor %}
 {% endautoescape %}
