--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Household/edit_full.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Household/edit_full.html.twig
@@ -3,18 +3,17 @@
 {% block title %}{{ entity.postalname }}{% endblock %}
 
 {% block body %}
-<h4>
-	{{ entity.postalname }}
-	<a href="{{ path('UMRA_Household_edit', { 'id': entity.id }) }}" class="btn btn-default btn-xs">
-		<span class="fa fa-pencil"></span> Edit Names
-	</a>
-</h4>
-
 <div id="page-content-container">
 	<div class="row">
 		<div class="col-xs-12">
 		{{ form_start(form) }}
 			{{ form_widget(form._token) }}
+
+			<h4>
+				{{ entity.postalname }}
+			</h4>
+
+			{{ form_row(form.postalname) }}
 
 			{% include 'UMRAMemberBundle:Person:_form_full.html.twig' with {
 				'members': form.persons,
