Link only to household edit pages on household#index
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Household/index.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Household/index.html.twig
@@ -30,15 +30,12 @@
         <tbody>
         {% for entity in entities %}
             <tr>
-                <td><a href="{{ path('UMRA_Household_show', { 'id': entity.id }) }}">{{ entity.lastname }}</a></td>
+                <td><a href="{{ path('UMRA_Household_edit_full', { 'id': entity.id }) }}">{{ entity.lastname }}</a></td>
                 <td>{{ entity.firstname }}</td>
                 <td>{{ entity.postalname }}</td>
                 <td>{{ entity.id }}</td>
                 <td>
                     <div class="btn-group">
-                        <a class="btn btn-primary btn-sm" href="{{ path('UMRA_Household_show', { 'id': entity.id }) }}">
-                            <span class="fa fa-eye"></span> View
-                        </a>
                         <a class="btn btn-default btn-sm" href="{{ path('UMRA_Household_edit_full', { 'id': entity.id }) }}">
                             <span class="fa fa-pencil"></span> Edit
                         </a>
