--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -1,11 +1,23 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
-    {% for key, message in app.session.getFlashBag() %}
-    <div class="alert alert-{{ key }}">
-        {{ message|trans({}, 'FOSUserBundle') }}
-    </div>
-    {% endfor %}
+    {% if app.request.hasPreviousSession %}
+        {% for type, messages in app.session.flashbag.all() %}
+            {% for message in messages %}
+                {% if type matches '/error|danger|failure/' %}
+                    {% set alert_class = 'danger' %}
+                {% elseif type matches '/success/' %}
+                    {% set alert_class = 'success' %}
+                {% else %}
+                    {% set alert_class = 'info' %}
+                {% endif %}
+
+                <div class="alert alert-{{ alert_class }}">
+                    {{ message|trans({}, 'FOSUserBundle') }}
+                </div>
+            {% endfor %}
+        {% endfor %}
+    {% endif %}
 
     <div class="row">
         <div class="col-xs-12">
