"Register for a Luncheon," should be "Make a Luncheon Reservation."
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Dashboard/index.html.twig
@@ -31,9 +31,9 @@
                     <div class="col-sm-4">
                         <a href="{{ path('UMRA_Luncheon_register') }}"
                            class="btn btn-default btn-lg btn-block">
-                            <span class="fa fa-check"></span><br/>
-                            Register for<br/>
-                            a Luncheon
+                            <span class="fa fa-cutlery"></span><br/>
+                            Make a Luncheon<br/>
+                            Reservation
                         </a>
                     </div>
                 </div>
