--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Dashboard/index.html.twig
@@ -17,7 +17,7 @@
                             class="btn btn-default btn-lg btn-block">
                             <span class="fa fa-edit"></span><br />
                             Update<br/>
-                            Your Records
+                            Your Record
                         </a>
                     </div>
                     <div class="col-sm-4">
